Adding the repository and the unit testing

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,19 @@
 spring:
   profiles:
     active: dev
-name:
+  jpa:
+    database: POSTGRESQL
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+  datasource:
+    platform: postgres
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: test
+    driverClassName: org.postgresql.Driver
 server:
   port: 8081
   servlet:
     contextPath: /mutant-finder
+
