--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.18</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
       <version>${mapstruct.version}</version>
@@ -135,6 +141,7 @@
         <configuration>
           <excludes>
             <exclude>**/*com/mercadolibre/services/mutantfinder/Application.class</exclude>
+            <exclude>**/*com/mercadolibre/services/mutantfinder/mappers/HumanClassificationMapperImpl.class</exclude>
           </excludes>
         </configuration>
         <executions>
