Solving bugs related to the stats

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 mutant-finder.iml
 
 target/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
